--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "load lemmy comments in web page",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "browser-sync start --config bs-config.cjs",
+    "dev": "webpack build --config ./webpack.config.js --watch",
+    "build": "NODE_ENV=production webpack build --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,25 @@
   "bugs": {
     "url": "https://github.com/leviwheatcroft/lemmy-blog-spam/issues"
   },
-  "homepage": "https://github.com/leviwheatcroft/lemmy-blog-spam#readme"
+  "homepage": "https://github.com/leviwheatcroft/lemmy-blog-spam#readme",
+  "dependencies": {
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.6.0",
+    "dayjs": "^1.11.9",
+    "handlebars-loader": "^1.7.3",
+    "postcss": "^8.4.7",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.2",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.0.23",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.23.6",
+    "eslint": "^8.40.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.15.1"
+  }
 }
