--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^6.6.0",
     "dayjs": "^1.11.9",
     "lit": "^2.8.0",
+    "marked": "^7.0.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.0.0",
     "webpack-cli": "^5.1.4"
